Fix web client bugs. Support small device widths.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Chatter - Connecting People</title>
     <link href="app.css" rel="stylesheet" type="text/css">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 </head>
 <body>
 <div id="app">
